# JapanAICalls

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_job_fields_for_ngrok_and_prices.py  0003_job_telegram_message_tracking.py  0004_job_call_language.py  0005_dealer_phone_resolver_fields.py  0006_call_queue_retry_fields.py  0007_call_state_machine_and_provider_events.py  0008_listing_fingerprint_and_notifications.py  0009_job_vin_stock_number.py  0010_request_call_campaigns.py  0011_request_call_language_and_url_context.py  0012_ai_quality_score.py  0013_request_call_service_messages.py  0014_group_chats_and_request_sequence.py  0015_request_call_owner_identity.py  0016_dealer_phone_contexts.py
app/: config.py  db.py  logging_config.py  models.py  repositories.py  schemas.py
app/api/: main.py
app/bot/: handlers.py  keyboards.py  runner.py
app/services/: call_state.py  cars_com_parser.py  carsensor_parser.py  dealer_phone_resolver.py  dealer_phone_resolver_us.py  elevenlabs_client.py  http.py  workflow.py  (+9 more)
tests/: test_api_routes.py  test_bot_keyboards.py  test_bot_runner.py  test_call_queue.py  test_cars_com_parser.py  test_carsensor_parser.py  test_dealer_phone_resolver.py  test_dealer_phone_resolver_us.py  test_elevenlabs_payload.py  test_happy_path.py  test_last_call_regressions.py  test_openai_spoken_normalization.py  test_phone_utils.py  test_request_call_mode.py  test_spoken_utils.py  test_telegram_presenter.py  test_timezone_utils.py
(+5 files in other folders)
