[project]
name = "japan-ai-calls"
version = "0.1.0"
description = "Carsensor calling bot MVP"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "playwright>=1.46.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0",
  "phonenumbers>=8.13.55",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
